# densepoints

./: .gitignore  CMakeLists.txt  README.md
methods/: CMakeLists.txt
methods/pmvs/: CMakeLists.txt  expand.cpp  expand.h  optimization.cpp  optimization.h  optimization_opencv.cpp  optimization_opencv.h  options.h  patch.cpp  patch.h  patch_organizer.cpp  patch_organizer.h  pmvs.cpp  pmvs.h  seed.cpp  seed.h  utils.cpp  utils.h
modules/: CMakeLists.txt
modules/core/: CMakeLists.txt  error_measurements.cpp  error_measurements.h  grid.cpp  grid.h  types.cpp  types.h
modules/features/: CMakeLists.txt  matcher.cpp  matcher.h
modules/geometry/: CMakeLists.txt  fundamental_matrix.cpp  fundamental_matrix.h  triangulation.cpp  triangulation.h  types.cpp  types.h
modules/image/: CMakeLists.txt  Image.h
modules/io/: CMakeLists.txt  Image.h  file_utils.cpp  file_utils.h  json_reader.cpp  json_reader.h
programs/: CMakeLists.txt
programs/densify/: CMakeLists.txt  main.cpp
tests/: CMakeLists.txt  test_data_generator.cpp  test_data_generator.h
tests/core/: test_error_functions.cpp  test_projection_matrix_decomposition.cpp  test_triangulation.cpp
